tests/ui/issues/issue-22289.rs
fn main() {
    0 as &dyn std::any::Any; //~ ERROR non-primitive cast
}
